Recognized Replicated in the footer

--- a/src/frontend/templates/footer.html
+++ b/src/frontend/templates/footer.html
@@ -21,6 +21,7 @@
         <div class="container footer-social">
             <p class="footer-text">This website is deployed for demo purposes only. It is not an actual shop. This is not a Google or Replicated product.</p>
             <p class="footer-text">© 2020 Google Inc (<a href="https://github.com/GoogleCloudPlatform/microservices-demo">Source Code</a>)</p>
+            <p class="footer-text">Lovingly distributed by your friends at <a href="https://replicated.com">Replicated</a> (<a href="https://github.com/crdant/online-boutique-replicated">source code</a>)</p>
             <p class="footer-text">
                 <small>
                     {{ if $.session_id }}session-id: {{ $.session_id }} — {{end}}
